src/objects/SupplyPoint__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Information displayed on a bill to advise the customers of the meter location. This may differ from the location field as customers tend to advise of this info themselves for their understanding. Not used to guide meter readers.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeviceLocation__c</fullName>
        <label>Device Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExcludeFromEstimation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Estimation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Other Retails Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Wholesaler/Merchants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpsecified Dist, Retail, Wholesale, Repairs, Hotels, Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi/coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Agents/Tours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus/rail Depots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air/Sea Terminals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haulage Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified Transport and Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property/Other Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business sevices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle/Equipment Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer related services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified Banking, Finance,Ins, Bus Serv, Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television/Radio/Other media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Washes/Valets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair/Beauty Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play Groups/Nurseries/Pres School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral Parlours/Crematoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museums/Galleries/Nat.Trust/History Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churches&amp;Halls/Convents/Graveyards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Supply Points</relationshipLabel>
        <relationshipName>SupplyPoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Measured__c</fullName>
        <label>Measured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartySupply__c</fullName>
        <description>Used for Operational / Disconnection Information</description>
        <label>Party Supply</label>
        <picklist>
            <picklistValues>
                <fullName>Able to Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Disconnect</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadFrequencyDate__c</fullName>
        <label>Read Frequency Date</label>
        <picklist>
            <controllingField>ReadFrequency__c</controllingField>
            <picklistValues>
                <fullName>Jan Apr Jul Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb May Aug Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar Jun Sept Dec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun Dec</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadFrequency__c</fullName>
        <description>Read Frequency will vary with clients so will need updating at implementation.</description>
        <label>Read Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmeasured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecialInstructions__c</fullName>
        <description>Used to advice readers of any dangers when reading the meter. For example angry dog.</description>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TotalActiveSupplyPointDevice__c</fullName>
        <description>Number of Total active Supply Point Device</description>
        <label># Total Active Supply Point Device</label>
        <summaryFilterItems>
            <field>SupplyPointDevice__c.ActiveBackground__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SupplyPointDevice__c.SupplyPoint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TouchpadLatitude__c</fullName>
        <label>Touchpad Latitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TouchpadLocation__c</fullName>
        <description>Defines the location of the touchpad for reading the device</description>
        <label>Touchpad Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TouchpadLongitude__c</fullName>
        <label>Touchpad Longitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TouchpadSerialNo__c</fullName>
        <label>Touchpad Serial No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supply Point</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Measured__c</columns>
        <columns>ReadFrequency__c</columns>
        <columns>Industry__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000000}</displayFormat>
        <label>Supply Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MeasuredSupplyPoint</fullName>
        <active>true</active>
        <description>If Measured = True, then Read Frequency must not be Unmeasured</description>
        <errorConditionFormula>AND ( ISPICKVAL(Measured__c, &apos;yes&apos;), ISPICKVAL( ReadFrequency__c , &apos;Unmeasured&apos;) )</errorConditionFormula>
        <errorMessage>Read Frequency must not be Unmeasured If Measured is yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SupplyPointCannotbeUnmeasured</fullName>
        <active>true</active>
        <description>If the user needs to add an active Supply Point Device to an Unmeasured Supply Point, he/she needs to update the linked Supply Point to Measured first.</description>
        <errorConditionFormula>ISPICKVAL(Measured__c ,&quot;No&quot;) &amp;&amp;  (TotalActiveSupplyPointDevice__c  &lt;&gt; 0)</errorConditionFormula>
        <errorMessage>Please update the related Supply Point to &quot;Measured&quot; first before adding a new active Supply Point Device.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UnmeasuredSupplyPoint</fullName>
        <active>true</active>
        <description>If Measured = False, then Read Frequency must be Unmeasured.</description>
        <errorConditionFormula>AND ( ISPICKVAL(Measured__c, &apos;No&apos;),  NOT(ISPICKVAL( ReadFrequency__c , &apos;Unmeasured&apos;)) )</errorConditionFormula>
        <errorMessage>Read Frequency must be Unmeasured if measured is selected as No.</errorMessage>
    </validationRules>
</CustomObject>